# maschine-mk1

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
bridge-python/: map.json  maschine-osc.py  maschine-osc.service
crates/mk1-bridge/: Cargo.toml
crates/mk1-bridge/src/: main.rs
crates/mk1-protocol/: Cargo.toml
crates/mk1-protocol/src/: display.rs  input.rs  leds.rs  lib.rs
docs/: design.md  protocol.md
firmware/: CMakeLists.txt
firmware-rs/: Cargo.toml
firmware-rs/.cargo/: config.toml
firmware-rs/src/: config.rs  main.rs  osc.rs  portal.rs  profile.rs  usb.rs  web.rs
firmware/src/: CMakeLists.txt  main.c
tools/: osc-rtt.py  rustjay-shim.py  vp404-profile.json
